<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"
       android:orientation="vertical"
       android:paddingLeft="16sp"
       android:paddingRight="32sp"
       android:paddingTop="16sp" >

       <TextView
           android:id="@+id/textView5"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/balance"
           android:textAppearance="@style/HeadingTextAppearance" />

       <TextView
           android:id="@+id/balance"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:gravity="right"
           android:text="0.00 €"
           android:textAppearance="@style/BalanceTextAppearance" />

       <TextView
           android:id="@+id/textView2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingTop="24sp"
           android:text="@string/last_transaction"
           android:textAppearance="@style/HeadingTextAppearance" />

       <TextView
           android:id="@+id/lasttransaction"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:gravity="right"
           android:text="0.00 €"
           android:textAppearance="@style/BalanceSmallTextAppearance" />

       <TextView
           android:id="@+id/textView6"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingTop="64sp"
           android:text="@string/details"
           android:textAppearance="@style/HeadingTextAppearance" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:paddingLeft="16sp" >

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content" >

               <TextView
                   android:id="@+id/textView7"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/card_issuer"
                   android:textAppearance="@style/DescriptionTextAppearance" />

               <TextView
                   android:id="@+id/card_issuer"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="right"
                   android:textAppearance="@style/DescriptionTextAppearance" />

           </LinearLayout>
           
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content" >

               <TextView
                   android:id="@+id/textView4"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/card_type"
                   android:textAppearance="@style/DescriptionTextAppearance" />

               <TextView
                   android:id="@+id/card_type"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="right"
                   android:textAppearance="@style/DescriptionTextAppearance" />

           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content" >

               <TextView
                   android:id="@+id/textView1"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/card_number"
                   android:textAppearance="@style/DescriptionTextAppearance" />

               <TextView
                   android:id="@+id/cardno"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="right"
                   android:textAppearance="@style/DescriptionTextAppearance" />
           </LinearLayout>

       </LinearLayout>
   </LinearLayout>

</RelativeLayout>
